--- a/css/home/introducao.css
+++ b/css/home/introducao.css
@@ -25,42 +25,59 @@
 }
 
 .introducao-botoes {
-  width: 100%;
+  height: 50px;
   display: flex;
-  align-items: center;
   justify-content: center;
+  align-items: center;
   gap: 32px;
   margin-bottom: 80px;
 }
 
 .botao {
-  min-width: 164px;
-  padding: 16px 32px;
-  background-color: var(--cor-2);
-  border-radius: 8px;
+  padding: 14px 0;
   font-size: 18px;
   font-weight: 600;
   letter-spacing: 3px;
-  color: var(--cor-5);
+  color: var(--cor-p2);
+  position: relative;
+}
+
+.botao::after {
+  content: "";
+  display: block;
+  height: 1.5px;
+  width: 0px;
+  background-color: var(--cor-p3);
+  margin-top: 2px;
+  transition: 0.3s ease;
+  position: absolute;
+}
+
+.botao:hover::after {
+  width: 100%;
 }
 
 @media (max-width: 640px) {
   .introducao-bg {
-    padding-top: 132px;
+    padding-top: 65px;
+  }
+
+  .introducao h1 {
+    font-size: 32px;
+    margin-bottom: 20px;
+  }
+
+  .botao {
+    color: var(--cor-p2);
+  }
+
+  .botao::after {
+    width: 100%;
   }
 }
 
 @media (max-width: 420px) {
   #app {
     font-size: 24px;
-  }
-
-  .introducao h1 {
-    font-size: 32px;
-  }
-
-  .introducao-botoes {
-    margin-bottom: 20px;
-    gap: 0;
   }
 }
