--- a/css/projetos/projetos.css
+++ b/css/projetos/projetos.css
@@ -3,7 +3,6 @@
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(2, 1fr);
-  padding: 65px 0;
   margin: 0 auto;
 }
 
